--- a/index.hbs
+++ b/index.hbs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<!-- style tag only for iframe forced height -->
+<html lang="en-gb" style="height: 100%">
 <head>
   <meta charset="utf-8">
   <title>Welcome to New Galveston!</title>
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
-<body>
-  <div id='main'></div>
+<body style="height: 100%; margin:0px;">
+  <div id='main' style="height: 100%"></div>
 </body>
 </html>
